# PU-BSDS-Study-Material

./: .gitignore
1st semester/English/: final.txt
1st semester/English/presentation/: Artificial Intelligence (AI).pptx  Artificial Intelligence.pptx  Initial lines.docx  New Text Document.txt
1st semester/ICT/: Aplication software.txt  Fill in the Blank.txt  Information System and System Development.txt  Internet And  WWW.txt  PROGRAM DEVELOPMENT.txt  System Software Operating System.txt  computer networks.txt
1st semester/ICT/ict lab 07/: Lab 5.pptx  Punjab University.pptx  Rollno_Task02.pptx.pptx
1st semester/ICT/ict lab 11/: 123456.html  (+4 more)
1st semester/c++/: 05function.cpp  06ArrayAverage.cpp  07ArrayInput.cpp  07gcd.cpp  2-D array.cpp  Untitled1.cpp  Untitled6.cpp  addition done c++.cpp  average done c++.cpp  average for N value and stop at -1.cpp  average for N values.cpp  conversion temperature.cpp  data.txt  e^x.cpp  filecreating.cpp  function.cpp  if and else loop.cpp  if else 2 integers are multile or not.cpp  if than else 18+ you can cast vote.cpp  loop first 10 multiples.cpp  loop min and second min.cpp  loop sum + average of first 10 inegers.cpp  loop sum of first 10 integers.cpp  min max problem.cpp  nbp  numbers greater than average and stops at -1.cpp  practice loop.cpp  practice work.cpp  simple 1 to 10.cpp  while loop c++.cpp
1st semester/islamiyat/: final.txt
1st semester/pf/: Untitled1.cpp  Untitled2.cpp  quiz.cpp
2nd semester/English/: APA.txt  Here’s a summary and usage guide fo.txt  MLA.txt
2nd semester/PF (oop's)/After Mid's/Classes/Class 2( cmake and make file )/_4_make_cmake_SFML/: CMakeLists.txt  _Readme.txt  makefile
2nd semester/PF (oop's)/After Mid's/Classes/Class 2( cmake and make file )/_4_make_cmake_SFML/src/: Tennis.cpp
3rd semester/Discrete Structures/: Chapter1p2.pptx  Chapter1p3.pptx  Chapter3.pptx  Chapter4.pptx
3rd semester/Introduction to Data Science/: Practice.py
(+378 files in other folders)
